7 August 2018
  - Update to libslink to 2.6.

6 July 2015
  - Update to libslink to 2.4b.
  - Small fix to logging shim functions to avoid compiler warnings.
  - version 4.2.

31 August 2012
  - Update to allow more packet types to be forwared to the orb, for
      example state-of-health channels should now work.
  - Cleanup some compiler warnings, fix a teeny-tiny print bug.
  - version 4.1.

5 March 2008
  - Update to libslink 2.1 which includes the ability to use wildcards
      in network and station fields during negotiation.
  - Change mseed2orbpkt() to only invoke a mapping database call if a
      mapping database was specified, eliminating stray foreignkeys dbs.
  - version 4.0

2 Mar 2006
  - Make 'slink2orb.pf' the default parameter file.

27 Jan 2006
  - Update to libslink 1.6, no changes to library or module.

8 Dec 2005
  - Update to libslink 1.6rc1 including many updates: error messages
      go to stderr, sl_connect does it's own parsing of the sladdr
      string and fills in default hostname and port when needed, and
      many small bug fixes.
  - Remove checking of sladdr from slink2orb.c, it's done in libslink.
  - Remove unused variables and other small fixes.
  - Add version number to help message.

18 Jun 2004
  - Update to libslink 1.2a with a fix for compiling using a compiler
      that does not assume *void == *char for pointer arithmetic, i.e.
      a Sun compiler.

17 Jun 2004
  - Update to libslink 1.2 including more flexible support for
      implementations of the SeedLink protocol other than the
      reference implementation by Andres Heinloo. 
  - version 3.4

25 Feb 2004
  - Split the '-d' option into two options '-dm' and '-dc' to 
      specify databases for mapping and calib, etc. separately.
  - Significant cleanup/update to the mseed2orbpkt.c code, now
      it's much more simple.
  - version 3.3
	
21 Jan 2004
  - Add hook functions to re-direct sl_log() usage to elog_notify()
      and elog_complain().
  - version 3.2
